--- a/2-03-JS-Maze-Game-project/index.html
+++ b/2-03-JS-Maze-Game-project/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Maze Game</title>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"
 			integrity="sha512-5T245ZTH0m0RfONiFm2NF0zcYcmAuNzcGyPSQ18j8Bs5Pbfhp5HP1hosrR8XRt5M3kSRqzjNMYpm2+it/AUX/g=="
